--- a/roles/init/tasks/main.yaml
+++ b/roles/init/tasks/main.yaml
@@ -35,3 +35,9 @@
     update_cache: yes
     cache_valid_time: 86400
 
+
+- name: Install Nginx web server
+  ansible.builtin.apt:
+    name: nginx
+    state: present
+
