--- a/roles/init/tasks/main.yaml
+++ b/roles/init/tasks/main.yaml
@@ -1,27 +1,27 @@
 #- name: Ansible ping module
 #  ansible.builtin.ping:
 ---
-- name: Create user juri
-  ansible.builtin.user:
-    name: juri
-    state: present
-    shell: /bin/bash
+#- name: Create user juri
+#  ansible.builtin.user:
+#    name: juri
+#    state: present
+#    shell: /bin/bash
 
-- name: Create user roman
-  ansible.builtin.user:
-    name: roman
-    state: present
-    shell: /bin/bash
+#- name: Create user roman
+#  ansible.builtin.user:
+#    name: roman
+#    state: present
+#    shell: /bin/bash
 
-- name: Set authorized keys taken from url for juri
-  ansible.posix.authorized_key:
-    user: juri
-    key: https://github.com/hudolejev.keys
+#- name: Set authorized keys taken from url for juri
+#  ansible.posix.authorized_key:
+#    user: juri
+#    key: https://github.com/hudolejev.keys
 
-- name: Set authorized keys taken from url for roman
-  ansible.posix.authorized_key:
-    user: roman
-    key:  https://github.com/romankuchin.keys
+#- name: Set authorized keys taken from url for roman
+#  ansible.posix.authorized_key:
+#    user: roman
+#    key:  https://github.com/romankuchin.keys
     
 - name: Update APT cache
   ansible.builtin.apt:
