--- a/roles/agama/tasks/main.yaml
+++ b/roles/agama/tasks/main.yaml
@@ -1,1 +1,27 @@
+- name: Create agama user
+  ansible.builtin.user:
+    name: agama
+    state: present
 
+- name: Create /opt/agama directory
+  ansible.builtin.file:
+    path: /opt/agama
+    state: directory
+    owner: agama
+    group: agama
+
+- name: Install AGAMA dependencies
+  ansible.builtin.apt:
+    name:
+      - python3
+      - python3-venv
+      - sqlite3
+    state: present
+    update_cache: no
+
+- name: Download AGAMA application
+  ansible.builtin.get_url:
+    url: "http://example.com/agama.tar.gz"
+    dest: /opt/agama/agama.tar.gz
+    owner: agama
+    group: agama
