--- a/roles/agama/tasks/main.yaml
+++ b/roles/agama/tasks/main.yaml
@@ -21,5 +21,6 @@
 
 - name: Install agama application
   ansible.builtin.get_url:
-    url: 
+    url: https://raw.githubusercontent.com/hudolejev/agama/master/agama.py
+    dest: /opt/agama/agama.py
   
