--- a/roles/agama/tasks/main.yaml
+++ b/roles/agama/tasks/main.yaml
@@ -18,6 +18,7 @@
       - python3-venv
       - sqlite3
       - python3-flask
+      - flask_sqlalchemy
     state: present
     update_cache: yes
 
