--- a/roles/uwsgi/tasks/main.yaml
+++ b/roles/uwsgi/tasks/main.yaml
@@ -15,7 +15,7 @@
     mode: '0600'
     no-log: true
     notify: 
-      - Restart uwsgi
+      - Restart uWSGI
 
 
 - name: Ensure the uWSGI service is started
