--- a/roles/uwsgi/tasks/main.yaml
+++ b/roles/uwsgi/tasks/main.yaml
@@ -17,7 +17,7 @@
     content: |
       [uswgi]
       chdir = /opt/agama
-      module = agama:aoo
+      module = agama:app
       env = AGAMA_DATABASE_URI=sqlite:////opt/agama/db.sqlite3
       plugins = python 3
       socket = 127.0.0.1:5000
