Create handlers/main.yaml, edited tasks/main.yaml

--- a/roles/nginx/tasks/main.yaml
+++ b/roles/nginx/tasks/main.yaml
@@ -10,3 +10,10 @@
     mode: '0644'
   notify:
     - Restart nginx
+
+- name: Ensure Nginx service is started and enabled
+  ansible.builtin.service:
+    name: nginx
+    state: started
+    enabled: true
+
