--- a/roles/nginx/tasks/main.yaml
+++ b/roles/nginx/tasks/main.yaml
@@ -5,7 +5,7 @@
 
 - name: Replace default Nginx config
   ansible.builtin.copy:
-    src: /files/default
+    src: roles/nginx/files/default
     dest: /etc/uwsgi/apps-enabled/agama.ini
     mode: '0644'
   notify:
