--- a/roles/uwsgi/tasks/main.yaml
+++ b/roles/uwsgi/tasks/main.yaml
@@ -13,15 +13,9 @@
 
 - name: Configure host uwsgi for AGAMA
   ansible.builtin.copy:
-    dest: /etc/uwsgi/apps-enabled/agama.ini
-    content: |
-      [uswgi]
-      chdir = /opt/agama
-      module = agama:app
-      env = AGAMA_DATABASE_URI=sqlite:////opt/agama/db.sqlite3
-      plugins = python 3
-      socket = 127.0.0.1:5000
-      uid = agama
+    src: agama.ini
+    dest: /etc/uwsgi/apps-enabled/agama.ini |
+    mode: '0600'
     owner: agama
   notify: Restart uwsgi
 
