--- a/roles/uwsgi/files/agama.ini
+++ b/roles/uwsgi/files/agama.ini
@@ -1,7 +1,7 @@
 [uwsgi]
-chdir = /path/to/agama/dir
+chdir = /opt/agama
 module = agama:app
-env = AGAMA_DATABASE_URI=mysql://<username>:<password>@<db-host>/<db-name>
+env = AGAMA_DATABASE_URI=sqlite:////path/to/db.sqlite3
 plugins = python3
 socket = localhost:5000
 uid = agama
