--- a/roles/nginx/tasks/main.yaml
+++ b/roles/nginx/tasks/main.yaml
@@ -5,8 +5,8 @@
 
 - name: Replace default Nginx config
   ansible.builtin.copy:
-    src: roles/nginx/files/default
-    dest: /etc/uwsgi/apps-enabled/agama.ini
+    src: default
+    dest: /etc/nginx/sites-enabled/default
     mode: '0644'
   notify:
     - Restart nginx
