--- a/roles/uwsgi/files/agama.ini
+++ b/roles/uwsgi/files/agama.ini
@@ -3,5 +3,5 @@ chdir = /opt/agama
 module = agama:app
 env = AGAMA_DATABASE_URI=sqlite:////opt/agama/db.sqlite3
 plugins = python3
-socket = localhost:5000
+socket = 127.0.0.1:5000
 uid = agama
