--- a/roles/agama/tasks/main.yaml
+++ b/roles/agama/tasks/main.yaml
@@ -20,6 +20,7 @@
       - sqlite3
       - python3-flask
       - python3-flask-sqlalchemy
+      - python3-jinja2
     state: present
 
 - name: Install agama application
