Created db hosts, mysql role, updated infra.yaml

--- a/infra.yaml
+++ b/infra.yaml
@@ -5,6 +5,12 @@
   roles:
     - init
 
+- name: Database server setup
+  hosts: db_servers
+  become: true
+    roles:
+      - mysql
+
 - name: Web server setup
   hosts: web_servers
   become: true
