Deleted mysql.conf.d, updated main.yaml to restart mysql and bind address

--- a/roles/mysql/tasks/main.yaml
+++ b/roles/mysql/tasks/main.yaml
@@ -3,6 +3,14 @@
     name: mysql-server
     state: present
 
+- name: Add MySQL bind address override
+  ansible.builtin.copy:
+    dest: /etc/mysql/mysql.conf.d/override.cnf
+    content: |
+      [mysqld]
+      bind-address = 0.0.0.0
+  notify: Restart MySQL
+
 - name: Ensure MySQL is running and enabled
   ansible.builtin.service:
     name: mysql
