--- a/roles/mysql/tasks/main.yaml
+++ b/roles/mysql/tasks/main.yaml
@@ -3,6 +3,12 @@
     name: mysql-server
     state: present
 
+- name: Install Python MySQL client
+  ansible.builtin.apt:
+    name: python3-pymysql
+    state: present
+  become: true
+
 - name: Add MySQL bind address override
   ansible.builtin.copy:
     dest: /etc/mysql/mysql.conf.d/override.cnf
@@ -17,4 +23,16 @@
     state: started
     enabled: yes
 
+- name: MySQL database
+  community.mysql.mysql_db:
+    name: "{{ mysql_database }}"
+    login_unix_socket: /var/run/mysqld/mysqld.sock
+
+- name: MySQL user
+  community.mysql.mysql_user:
+    name: "{{ mysql_user }}"
+    password: "{{ mysql_password }}"
+    login_unix_socket: /var/run/mysqld/mysqld.sock
+    host: "%"
+    priv: "{{ mysql_database }}.*:ALL"
 
