--- a/roles/bind/tasks/main.yaml
+++ b/roles/bind/tasks/main.yaml
@@ -3,18 +3,24 @@
     name: bind9
     state: present
 
+- name: Configure named.conf files Template
+  ansible.builtin.template:
+    src: named.conf.{{ item }}.j2
+    dest: /etc/bind/named.conf.{{ item }}
+    mode: '0644'
+  with_items:
+    - options
+    - local
+
 - name: Run Zone template
   ansible.builtin.template:
     src: zone.j2
-    dest: /var/cache/bind/db.daayso.da
-
-- name: Restart Bind9
-  ansible.builtin.service:
-    name: bind9
-    state: restarted
+    dest: /var/cache/bind/db.{domain_name}
+  notify: Restart Bind9
 
 - name: Ensure Bind9 service is started and running
   ansible.builtin.service:
     name: bind9
     state: started
     enabled: yes
+
