Changed bind config

--- a/roles/bind/tasks/main.yaml
+++ b/roles/bind/tasks/main.yaml
@@ -5,7 +5,7 @@
 
 - name: Configure named.conf files Template
   ansible.builtin.template:
-    src: named.conf.{{ item }}.j2
+    src: named.conf.{{ item }}
     dest: /etc/bind/named.conf.{{ item }}
     mode: '0644'
   with_items:
@@ -25,3 +25,12 @@
     state: started
     enabled: yes
 
+- name: Reload Bind9  
+  ansible.builtin.service:
+    name: bind9
+    state: reloaded
+
+- name: Restart Bind9
+  ansible.builtin.service:
+    name: bind9
+    state: restarted
