--- a/roles/init/tasks/main.yaml
+++ b/roles/init/tasks/main.yaml
@@ -28,3 +28,7 @@
     update_cache: yes
     cache_valid_time: 86400
 
+- name: Install Prometheus node 
+  ansible.builtin.apt:
+    name: prometheus-node-exporter
+    state: present
