--- a/roles/nginx/tasks/main.yaml
+++ b/roles/nginx/tasks/main.yaml
@@ -10,6 +10,7 @@
     src: default.j2
     dest: /etc/nginx/sites-enabled/default
     mode: '0644'
+    force: yes
   notify: 
     - Restart nginx
     - Restart nginx prometheus
