--- a/roles/bind/handlers/main.yaml
+++ b/roles/bind/handlers/main.yaml
@@ -7,3 +7,8 @@
   ansible.builtin.service:
     name: bind9
     state: restarted
+
+- name: Restart Exporter
+  ansible.builtin.service:
+    name: prometheus-bind-exporter
+    state: restarted
