--- a/roles/bind/tasks/main.yaml
+++ b/roles/bind/tasks/main.yaml
@@ -1,7 +1,18 @@
 - name: Install Bind9
   ansible.builtin.apt:
-    name: bind9
+    name: 
+      - bind9
+      - prometheus-bind-exporter
     state: present
+
+- name: Ensure Bind9 service is started and running
+  ansible.builtin.service:
+    name: "{{ item }}"
+    state: started
+    enabled: yes
+  loop:
+    - named
+    - prometheus-bind-exporter
 
 - name: Configure named.conf files Template
   ansible.builtin.template:
@@ -11,7 +22,9 @@
   with_items:
     - options
     - local
-  notify: Reload Bind9
+  notify: 
+    - Reload Bind9
+    - Restart Exporter
 
 - name: Run Zone template
   ansible.builtin.template:
@@ -19,8 +32,3 @@
     dest: /var/cache/bind/db.{{ domain_name }}
   notify: Restart Bind9
 
-- name: Ensure Bind9 service is started and running
-  ansible.builtin.service:
-    name: bind9
-    state: started
-    enabled: yes
