--- a/roles/mysql/tasks/main.yaml
+++ b/roles/mysql/tasks/main.yaml
@@ -10,11 +10,9 @@
   become: true
 
 - name: Add MySQL bind address override
-  ansible.builtin.copy:
+  ansible.builtin.template:
+    src: override.cnf.j2
     dest: /etc/mysql/mysql.conf.d/override.cnf
-    content: |
-      [mysqld]
-      bind-address = 0.0.0.0
   notify: Restart MySQL
       
 - name: Ensure MySQL is running and enabled
@@ -36,4 +34,29 @@
     host: "%"
     priv: "{{ mysql_database }}.*:ALL"
 
+- name: Create cnf template
+  ansible.builtin.template:
+    src: .my.cnf.j2
+    dest: /var/lib/prometheus/.my.cnf
+    owner: prometheus
+    group: prometheus
+  notify: Restart MySQL exporter
 
+- name: Install MySQL exporter
+  ansible.builtin.apt:
+    name: prometheus-mysqld-exporter
+    state: present
+
+- name: MySQL exporter user
+  community.mysql.mysql_user:
+    name: " {{ exporter_user }}"
+    password: "{{ exporter_password }}"
+    priv: "*.*:PROCESS,REPLICATION CLIENT, SELECT"
+    login_unix_socket: /var/run/mysqld/mysqld.sock
+  notify: Restart MySQL exporter  
+
+- name: Ensure mysql exporter running and enabled
+  ansible.builtin.service:
+    name: prometheus-mysqld-exporter
+    state: started
+    enabled: true
