--- a/roles/mysql/tasks/main.yaml
+++ b/roles/mysql/tasks/main.yaml
@@ -14,7 +14,7 @@
     src: override.cnf.j2
     dest: /etc/mysql/mysql.conf.d/override.cnf
   notify: Restart MySQL
-      
+
 - name: Ensure MySQL is running and enabled
   ansible.builtin.service:
     name: mysql
@@ -40,20 +40,22 @@
     dest: /var/lib/prometheus/.my.cnf
     owner: prometheus
     group: prometheus
-  notify: Restart MySQL exporter
+  notify: Restart MySQL Exporter
 
 - name: Install MySQL exporter
   ansible.builtin.apt:
     name: prometheus-mysqld-exporter
     state: present
 
-- name: MySQL exporter user
+- name: Ensure MySQL exporter user exists
   community.mysql.mysql_user:
-    name: " {{ exporter_user }}"
+    name: "{{ exporter_user }}"
     password: "{{ exporter_password }}"
     priv: "*.*:PROCESS,REPLICATION CLIENT, SELECT"
     login_unix_socket: /var/run/mysqld/mysqld.sock
-  notify: Restart MySQL exporter  
+    host: "%"
+    state: present
+  notify: Restart MySQL Exporter
 
 - name: Ensure mysql exporter running and enabled
   ansible.builtin.service:
