--- a/roles/init/tasks/main.yaml
+++ b/roles/init/tasks/main.yaml
@@ -32,3 +32,11 @@
   ansible.builtin.apt:
     name: prometheus-node-exporter
     state: present
+
+- name: Run Rsyslog template
+  ansible.builtin.template:
+    src: rsyslog.conf
+    dest: /etc/rsyslog.d/prometheus.conf
+    mode: '0644'
+  notify: Restart Rsyslog
+
