--- a/roles/bind/tasks/main.yaml
+++ b/roles/bind/tasks/main.yaml
@@ -2,17 +2,43 @@
   ansible.builtin.apt:
     name: 
       - bind9
-      - prometheus-bind-exporter
     state: present
 
+- name: Install Bind9 exporter 
+  ansible.builtin.get_url: 
+    url: https://github.com/prometheus-community/bind_exporter/releases/download/v0.7.0/bind_exporter-0.7.0.linux-amd64.tar.gz
+    dest: /opt/bind_exporter.tar.gz
+
+- name: Create directory for Bind Exporter
+  ansible.builtin.file:
+    path: /opt/bind_exporter
+    state: directory
+    mode: '0755'
+
+- name: Extract Bind Exporter
+  ansible.builtin.unarchive:
+    src: /opt/bind_exporter.tar.gz
+    dest: /opt/bind_exporter
+    extra_opts: [--strip-components=1]
+    remote_src: yes
+
+- name: Create symlink for Bind Exporter
+  ansible.builtin.file:
+    src: /opt/bind_exporter/bind_exporter
+    dest: /usr/local/bin/prometheus-bind-exporter
+    state: link
+
+- name: Create Bind9 exporter systemd service
+  ansible.builtin.template:
+    src: bind_exporter.service
+    dest: /etc/systemd/system/prometheus-bind-exporter.service
+    mode: '0644'
+  
 - name: Ensure Bind9 service is started and running
   ansible.builtin.service:
-    name: "{{ item }}"
+    name: bind9
     state: started
     enabled: yes
-  loop:
-    - named
-    - prometheus-bind-exporter
 
 - name: Configure named.conf files Template
   ansible.builtin.template:
