--- a/roles/init/tasks/main.yaml
+++ b/roles/init/tasks/main.yaml
@@ -46,7 +46,12 @@
     state: present
     home: /home/backup
     shell: /bin/bash
-    generate_ssh_key: true
+    create_home: yes
+
+- name: Generate SSH keypair
+  ansible.builtin.user:
+    name: backup
+    generate_ssh_key: yes
     ssh_key_file: /home/backup/.ssh/id_rsa
   
 - name: Ensure .ssh directory exists for backup user
@@ -64,3 +69,16 @@
     owner: backup
     group: backup
     mode: '0644'
+
+- name: Make Backup owner of INIT DIR
+  ansible.builtin.file:
+    path: /home/backup/restore
+    state: directory
+    owner: backup
+    group: backup
+    mode: '0744'
+
+- name: Install Duplicity
+  ansible.builtin.apt:
+    name: duplicity
+    state: present
