--- a/roles/bind/handlers/main.yaml
+++ b/roles/bind/handlers/main.yaml
@@ -12,3 +12,7 @@
   ansible.builtin.systemd:
     name: prometheus-bind-exporter
     state: restarted
+
+- name: Reload systemd
+  ansible.builtin.systemd:
+    daemon_reload: yes
