--- a/roles/prometheus/tasks/main.yaml
+++ b/roles/prometheus/tasks/main.yaml
@@ -12,7 +12,7 @@
 - name: Run Prometheus config template
   ansible.builtin.template:
     src: config.yaml.j2 
-    dest: /etc/prometheus/prometheus.yaml
+    dest: /etc/prometheus/prometheus.yml
     mode: '0644'
   notify: Restart Prometheus
 
@@ -22,6 +22,7 @@
     dest: /etc/default/prometheus
     mode: '0755'
   notify: Restart Prometheus
+
 
 
 
